trunk/Archive2/9c/f074c19572a3fb/output
main.cpp:11:16: error: use of deleted function 'B::B()'
     B *b = new B;
                ^
main.cpp:9:12: note: 'B::B()' is implicitly deleted because the default definition would be ill-formed:
     struct B: A { };
            ^
main.cpp:9:12: error: use of deleted function 'A::~A()'
main.cpp:6:9: note: declared here
         ~A() = delete; //{ std::cout << "~A::A()" << std::endl; };
         ^
